AM_CPPFLAGS = -I${top_srcdir}
LDADD = ../oh/libObjectHandler.la

EXTRA_DIST = \
    Example.dev \
    Example.dsp \
    Example.vcproj \
    Example_vc8.vcproj \
    makefile.mak \
    utilities.hpp \
    objectfoo.hpp \
    foo.hpp

Example_SOURCES = \
    example.cpp  \
    utilities.cpp  \
    objectfoo.cpp

noinst_PROGRAMS = Example

