AM_CPPFLAGS = -I${top_srcdir}
LDADD = ../oh/libObjectHandler.la

#    Example.dev \
#    makefile.mak \
EXTRA_DIST = \
    Example.dsp \
    Example_vc8.vcproj \
    Example.vcproj \
    foo.hpp \
    objectfoo.hpp

Example_SOURCES = \
    example.cpp  \
    objectfoo.cpp

noinst_PROGRAMS = Example

